--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="preloader.js"></script>
     <script src="mainmenu.js"></script>
     <script src="game.js"></script>
+    <script src="WinScreen.js"></script>
 </head>
 
 <body>
