--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <script src="boot.js"></script>
     <script src="preloader.js"></script>
     <script src="mainmenu.js"></script>
-    <script src="game.js"></script>
+    <script src="Level1.js"></script>
+    <script src="Level2.js"></script>
+    <script src="Level3.js"></script>
     <script src="WinScreen.js"></script>
 </head>
 
