--- a/index.html
+++ b/index.html
@@ -15,12 +15,25 @@
     <script src="Level2.js"></script>
     <script src="Level3.js"></script>
     <script src="WinScreen.js"></script>
+    <script src="GameOver.js"></script>
 </head>
 
 <body>
     <h1>One Button project</h1>
 
     <div id="content"></div>
+
+    <ul>
+
+        <li><a href="http://ninow.nl/oneButtonGame/oneButton/Documentation/onepage.png">onePage</a>
+            <a href="http://ninow.nl/oneButtonGame/oneButton/Documentation/classdiagram.png">class diagram</a>
+            <a href="http://ninow.nl/oneButtonGame/oneButton/Documentation/pseudo">pseudo code</a>
+            <a href="http://ninow.nl/oneButtonGame/oneButton/Documentation/userstory">user story</a>
+
+
+
+
+    </ul>
 </body>
 
 </html>
